# yahboomcar_ws

./: .gitignore
src/yahboomcar_astra/scripts/: colorHSV.text
src/yahboomcar_astra/src/: KCF_Tracker.cpp
src/yahboomcar_autodrive/: CMakeLists.txt
src/yahboomcar_autodrive/include/yahboomcar_autodrive/: AutoDrive.h
src/yahboomcar_autodrive/launch/: autodrive_bringup.launch  navigation.launch
src/yahboomcar_autodrive/maps/: map.yaml  road_old.yaml
src/yahboomcar_autodrive/param/: traffic.yaml
src/yahboomcar_autodrive/rviz/: road.rviz
src/yahboomcar_autodrive/scripts/: 2022-11-10-18-10-32.bag  LineFollowHSV.text  Turn_Right.py  detection_video.py  line_detect.py  msgToimg-Copy1.py  msgToimg.py  test.py  traffic_logo_identify-Copy1.py  traffic_logo_identify.py  yolov5BKorigin.py
src/yahboomcar_autodrive/src/: AutoDrive.cpp  AutoDriveNode.cpp
src/yahboomcar_bringup/scripts/: Mcnamu_driver.py
src/yahboomcar_ctrl/scripts/: yahboom_joy.py
src/yahboomcar_description/launch/: display.launch
src/yahboomcar_gazebo/launch/: display.launch
src/yahboomcar_linefollw/scripts/: LineFollowHSV.text
src/yahboomcar_mediapipe/scripts/: 01_HandDetector.py  02_PoseDetector.py  03_Holistic.py  04_FaceMesh.py
src/yahboomcar_multi/launch/: laser_astrapro_bringup_multi.launch  laser_bringup_multi.launch  laser_usb_bringup_multi.launch  yahboomcar_nav_multi.launch
src/yahboomcar_multi/maps/: my_apm.yaml  my_map.pgm
src/yahboomcar_nav/launch/: astrapro_bringup.launch  laser_astrapro_bringup.launch  yahboomcar_rtabmap_nav.launch
src/yahboomcar_nav/maps/: 1.pgm  (+6 more)
(+14 files in other folders)
